--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <p>Email: manjugorige@gmail.com</p>
       </div>
     </div>
+    <div
 
     <div class="text-center mt-8 text-xs text-gray-400">
       © 2025 Friendsbikes. All rights reserved.
