--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </ul>
       </div>
       <div>
+      </div>
         <h3 class="font-semibold mb-3">Company</h3>
         <ul>
           <li><a href="#" class="hover:underline">Partner with Us</a></li>
