--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
       </div>
       <div>
         <h3 class="font-semibold mb-3">Contact</h3>
-        <p>Call: 9100224701</p>
-        <p>Email: manjugorige@gmail.com</p>
+        <p>Call: 9100224701,9398385733</p>
+        <p>Email: manjugorige@gmail.com<br>yannamchandrashekharreddy@gmail.com</p>
       </div>
     </div>
 
